--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
         <td><input type="button" value="7" onClick=retornar(value)></td>
         <td><input type="button" value="8" onClick=retornar(value)></td>
         <td><input type="button" value="9" onClick=retornar(value)></td>
-        <td><input type="button" value="+"></td>
-        <td><input type="button" value="-"></td>
+        <td><input type="button" value="+" onClick=comprobar(value)></td>
+        <td><input type="button" value="-" onClick=comprobar(value)></td>
       </tr>
 
       <tr>
         <td><input type="button" value="4" onClick=retornar(value)></td>
         <td><input type="button" value="5" onClick=retornar(value)></td>
         <td><input type="button" value="6" onClick=retornar(value)></td>
-        <td><input type="button" value="*"></td>
-        <td><input type="button" value="/"></td>
+        <td><input type="button" value="*" onClick=comprobar(value)></td>
+        <td><input type="button" value="/" onClick=comprobar(value)></td>
       </tr>
 
       <tr>
@@ -42,7 +42,7 @@
       <tr>
         <td colspan="2"><input type="button" value="0" onClick=retornar(value)></td>
         <td></td>
-        <td colspan="2"><input type="button" value="="></td>
+        <td colspan="2"><input type="button" value="=" onClick=calcular()></td>
       </tr>
 
 
